correcting input email to better view on small iphones

--- a/src/style.css
+++ b/src/style.css
@@ -428,6 +428,10 @@ footer a {
     margin-bottom: 0;
   }
 
+  h2 {
+    font-size: 1.5rem;
+  }
+
   section {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -450,9 +454,14 @@ footer a {
     height: 1rem;
   }
 
-  input[type="submit"] {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  input[type="submit"],
+  input[type="email"] {
+    border: 2px solid #ffc857;
+  }
+
+  input[type="email"] {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .fab {
